--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+body {
+    margin: 0;
+
+}
+
+
 .header {
     background-color: #1F2937;
-    
     display: flex;
-    margin: -8px;
+
     padding: 20px 100px;
     border: 0;
     justify-content: space-between;
@@ -28,4 +33,51 @@ ul {
 .right-content a {
     text-decoration: none;
     color: #E5E7EB;
+}
+
+.body {
+    display: flex;
+    background-color: #1F2937;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 100px;
+    border: 4px solid blue;
+}
+
+.left-body {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 0;
+    border: 4px solid green;
+}
+
+.body-header {
+    font-weight: bolder;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.body-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.body-signup button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+
+
+}
+
+.right-body {
+    flex: 1 1 0;
+}
+
+.office {
+    width: 500px;
+
 }
